--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   type: "documentation"
   lifecycle: "production"
-  owner: "digibok"
+  owner: "Digibok"
   system: "grunnbok"
 ---
 apiVersion: "backstage.io/v1alpha1"
